pl0.ebnf
program = block "." ;

block = [ "const" ident "=" number {"," ident "=" number} ";"]
        [ "var" ident {"," ident} ";"]
        { "procedure" ident ";" block ";" } statement ;

statement = [ ident ":=" expression | "call" ident 
              | "?" ident | "!" expression 
              | "begin" statement {";" statement } "end" 
              | "if" condition "then" statement 
              | "while" condition "do" statement ];

expression     = "odd" term | equality;
equality       = term ("=="|"!="|"<"|"<="|">"|">=") term;
term           = [ "+"|"-"] factor { ("+"|"-") factor};
factor         = primary {("*"|"/") primary};
primary        = ident | number | "(" expression ")";
